added extra notes

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 iOS friendly page for the bespoke page for sassalina.com
+The bespoke page is currently made with Flash so the ipad
+is diverted to this page.
